--- a/cashout/templates/cashout/payments.html
+++ b/cashout/templates/cashout/payments.html
@@ -173,7 +173,7 @@
                     <h4 class="modal-title"></h4>
                 </div>
                 <div class="modal-body">
-                    <form onclick="return false" class="form-horizontal">
+                    <form onsubmit="return false" class="form-horizontal">
                         <input type="hidden" id="address-id" />
                         <div class="form-group row">
                             <label for="payment-method" class="col-sm-5 col-md-4">{% trans "Method" %} </label>
