--- a/partnership/templates/partnership/cloud_setup/settings.html
+++ b/partnership/templates/partnership/cloud_setup/settings.html
@@ -161,7 +161,8 @@ STATIC_URL = '{{ static_url }}'
 TEMPLATE_DIRS = (
     os.path.join(BASE_DIR,  'templates'),
     '/home/komsihon/Dropbox/PycharmProjects/ikwen/partnership/templates',
-    '/home/komsihon/Dropbox/PycharmProjects/ikwen/WebNode/templates'
+    '/home/komsihon/Dropbox/PycharmProjects/ikwen/WebNode/templates',
+    '/home/komsihon/Dropbox/PycharmProjects/ikwen/templates',
 )
 
 CACHES = {
