--- a/accesscontrol/templates/accesscontrol/set_new_password.html
+++ b/accesscontrol/templates/accesscontrol/set_new_password.html
@@ -1,6 +1,5 @@
 {% extends "core/base_bs.html" %}
-{% load i18n %}
-{% load staticfiles %}
+{% load i18n static %}
 
 {% block page_title %}<title>{{ service.project_name }} - {% trans "Set your new password" %} </title>{% endblock %}
 {% block head_style %}
