--- a/core/templates/core/base_bs.html
+++ b/core/templates/core/base_bs.html
@@ -10,7 +10,7 @@
         {% endblock %}
 		{% block page_title %}{% endblock %}
 		{% block head_style %}
-            <link rel='stylesheet' href="{% static 'ikwen/font-awesome/css/font-awesome.min.css' %}" />
+            <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
             <link rel='stylesheet' href="{% static 'ikwen/css/flatly.bootstrap.min.css' %}" />
             <link rel='stylesheet' href="{% static 'ikwen/css/base.css' %}" />
 		{% endblock %}
