--- a/static/ikwen/css/admin.css
+++ b/static/ikwen/css/admin.css
@@ -11,6 +11,9 @@ body {font-size: 13px;overflow: hidden;}
 .glyphicon.toggle.off {color: #33c800}
 .verify {border: 1px solid #e74c3c} /* Highlights form errors (Check performed by javascript) */
 .spinner {background: rgba(255, 255, 255, .6);height: 100%;left: 0;padding-top: 20%;position: fixed;top: 0;width: 100%; z-index: 10000}
+.btn-default {color: #51696b;background: none;border-color: #dce4ec;}
+.btn-default:hover {color: #51696b;background: #f1f1f1;border-color: #dce4ec;}
+.btn-default:active:hover {color: #51696b;background: #e6e6e6;border-color: #dce4ec;}
 
 #selection-control {
     background: #fff;
@@ -29,7 +32,7 @@ body {font-size: 13px;overflow: hidden;}
     float: left;height: 24px;opacity: .5; width: 24px;}
 #selection-control .select-count {float: left; margin-left: 30px}
 #selection-control .actions {float: right}
-#app-nav {background: #fff; border-bottom: 1px solid #eee;border-top: 1px solid #eee;font-weight: 700;height: 45px;margin-top: 47px;padding-top: 10px;position: fixed;width: 100%;z-index: 12;}
+#app-nav {background: #fff;border-bottom: 1px solid #eee;border-top: 1px solid #eee;font-weight: 700;height: 45px;margin-top: 47px;padding-top: 10px;position: fixed;width: 100%;z-index: 21;}
 #app-nav .app-name {display: none}
 #app-nav .app-logo {float: left;height: 30px;width: 30px;margin-right: 5px;}
 #app-nav .breadcrumb {background: none;float: left;padding-top: 5px;padding-left: 0;}
@@ -40,18 +43,20 @@ div#container.admin {padding-top: 92px;}
 #admin-nav .wrapper {padding: 20px 0 90px;}
 #admin-nav .stage {width: 100%;padding: 0 0 200px;}
 #admin-nav {background: #fff;left: 0;max-width: 240px;overflow: auto;position: fixed;height: 100%;width: 80%;top: 0;z-index: 1;}
-#admin-nav .divider {border-top: 1px solid #eee;margin: 15px 0;}
+#admin-nav .divider {margin: 15px 0;}
 .nav-pills>li>a {padding: 9px 15px;cursor: pointer;font-weight: 700;color: #777;}
 .nav-pills>li.active>a, .nav-pills>li.active>a:hover, .nav-pills>li.active>a:focus {background: #eee;color: #333;}
 
 #admin-content {height: 100%;overflow: auto;position: absolute;width: 100%;}
+#admin-content .spinner {background: rgba(255, 255, 255, .6); height: 100%; padding-top: 20%; width: 100%; z-index: 100}
+#admin-content > .spinner {margin-left: -250px; padding-top: 20%; position: absolute}
 
 #admin-tools-form div {float: left; margin-right: 10px}
 #filter-nav {padding: 0 10px;}
 #filter-nav span {cursor: pointer; float: left;width: 50%;padding-bottom: 6px;}
 #admin-nav .filter, #admin-nav .menu {float: left;width: 100%;padding: 0 10px;}
-.go-to-website, .go-to-website:hover, .go-to-website:active {color: #888;font-weight: 400;}
-.go-to-website .glyphicon {float: left; font-size: 24px}
+#app-nav .glyphicon, #app-nav .glyphicon:hover, #app-nav .glyphicon:active, #app-nav .fa, #app-nav .fa:hover, #app-nav .fa:active {color: #888;}
+#app-nav .glyphicon, #app-nav .fa {float: left; font-size: 24px}
 .go-to-website span {float: left;margin-left: 5px;margin-top: 3px;}
 
 #admin-content {padding-top: 15px;min-height: 450px;padding-bottom: 120px;}
@@ -63,10 +68,10 @@ div#container.admin {padding-top: 92px;}
 #admin-content.change-form h3:first-of-type {margin-top: 0}
 
 #admin-tools {padding: 0 15px;clear: both;position: fixed;width: 100%;background: #fff;z-index: 11;}
-#admin-tools input, #admin-tools select, #admin-tools .btn-sm {border: 1px solid #ddd;font-size: 13px;padding-left: 32px;}
-#admin-tools .btn.action .glyphicon {float: left; margin: 1px 10px 0 -20px}
+#admin-tools input, #admin-tools select {border: 1px solid #ddd;font-size: 13px;padding-left: 32px;}
+#admin-tools .btn.action .glyphicon {float: left;margin: 1px 10px 0 0;}
 #admin-tools-form {float: left}
-#admin-tools-form .glyphicon-search {margin-right: -26px;margin-left: 10px;}
+#admin-tools-form .glyphicon-search {margin-right: -26px;margin-left: 9px;}
 .filter-trigger > .glyphicon-filter {float: left;margin: 8px -24px 0 12px;}
 #admin-tools-form .glyphicon-menu-left {display: none}
 
@@ -106,6 +111,7 @@ footer a {color: #999}
 #object-detail .ik-li {padding: 5px 0;}
 #object-detail .ik-li .about {font-size: 13px; margin-top: 2px}
 #object-detail .container-fluid {padding: 0 10px}
+#object-detail .spinner {left: auto; position: fixed; right: 0; top: 0; width: 270px}
 
 .payment-mean {display: block;height: 45px;background: #fff;}
 .payment-mean span {float: left; padding: 12px 15px; width: 35%}
@@ -136,6 +142,7 @@ footer a {color: #999}
 .object-list {
     padding: 0;
 }
+.tiles.object-list {margin-top: 20px}
 .object-list .list-group-item:first-of-type {border-top: none}
 #results {clear: both}
 #admin-tools + #results {margin-top: 20px;}
@@ -160,12 +167,12 @@ footer a {color: #999}
     #admin-tools .btn.action .glyphicon {margin-right: 0}
     #admin-tools .glyphicon-menu-left {margin: 2px -24px 0 6px;}
     #admin-tools .tool {display: none}
-    #admin-tools input, #admin-tools select, #admin-tools .btn {border: none;margin-top: -4px;/* width: 200px; */background: none;padding-right: 0;}
+    #admin-tools input, #admin-tools select, #admin-tools .btn {border: none;margin-top: -7px; background: none;padding-right: 0;}
     #admin-tools input:focus {outline: none;}
+    #admin-tools .btn {color: #888}
     #admin-tools .btn:active, #admin-tools .btn.active {background: none; color: #545454; box-shadow: none}
-    #admin-tools-form .glyphicon-search {
-        margin: 2px 0 0;
-    }
+    #admin-tools-form .glyphicon-search {margin: 2px 0 0}
+    #results {padding: 0}
     .filter-trigger > .glyphicon-filter {float: left;margin: 2px 0 0 10px;}
     .content-tab-list {background: #f8f6f6}
     #admin-tools + .content-tab-list {padding-top: 15px;}
@@ -190,11 +197,15 @@ footer a {color: #999}
     .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:hover, .navbar-default .navbar-nav>.open>a:focus {color: #666}
     #app-nav {background: #fff; margin-top: 65px;}
     div#container.admin {padding-top: 110px;}
+    .admin-form.center {margin: auto; width: 400px;}
+    .admin-form .form-control:not([type=checkbox]) {width: 400px;}
     .admin-form .form-group:last-child {padding-left: 0}
     .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:hover, .navbar-default .navbar-nav>.open>a:focus {background: #eee}
     #admin-content.has-edge-panel-right, #admin-content.has-edge-panel-right #admin-tools {padding-right: 270px;}
     #admin-tools {height: 50px;margin-top: -15px;padding-top: 15px;}
     #admin-tools.single input, #admin-tools.single select, #admin-tools.single .btn-sm {margin-top: -8px}
+    #admin-tools .btn {margin-right: 15px;}
+    #admin-tools .btn i {margin-right: 5px}
     #admin-tools .filter-trigger {margin-left: 15px;}
     .content-tab-list {background: #fff;padding-top: 15px;margin-top: -15px;}
     .has-edge-panel-right .content-tab-list {padding-right: 270px}
@@ -202,6 +213,7 @@ footer a {color: #999}
     #admin-tools + .content-tab-list {margin-top: 35px;}
     #admin-tools + .content-tab-list + .tab-content {margin-top: 90px}
     #object-detail {border-left: 1px solid #eee;top: 110px;}
+    #object-detail .spinner {top: 110px}
     .images-uploader .frame {width: 235px;height: 190px;}
     .images-uploader .qq-upload-button {line-height: 190px}
     #admin-tools + #results {margin-top: 35px;}
@@ -220,12 +232,13 @@ footer a {color: #999}
     #admin-content {padding-left: 255px}
     #selection-control {height: 66px;min-height: 66px; padding-top: 20px; top: -70px}
     #selection-control .actions {margin-top: -4px}
-    .admin-form .form-control:not([type=checkbox]) {width: 400px;}
     .help {padding-top: 3px}
     #admin-content > .container-fluid {padding-right: 15px;}
     #admin-content.change-form {padding-top: 15px}
     #admin-content.change-form form {padding-left: 0}
+    #admin-content .configuration-stage {margin: auto; width: 820px}
     #admin-tools {padding-left: 0; padding-right: 285px}
+    #admin-tools .btn {margin-right: 0}
     #admin-content.has-edge-panel-right #admin-tools {padding-right: 540px;}
     .results-filter {padding: 30px 10px 5px 0;}
     #admin-content .member .info, #admin-content .ik-li .info {max-width: 600px;}
@@ -238,6 +251,6 @@ footer a {color: #999}
 }
 
 /* Object Details ik-li info width must be overriden */
-#object-detail .ik-li .info {width: auto}
+#object-detail .ik-li .info {width: auto;max-width: 174px;}
 #delete-theme-logo {color: #ff3030; cursor: pointer; float: right}
 #delete-image {color: #ff3030; cursor: pointer; margin: 0 10px}
